<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    
    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tv_result"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:text="0"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Gray.Button"
                android:text="@string/ac"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                android:text="@string/erase"
                style="@style/Gray.Button"
                android:id="@+id/btn_erase"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                android:text="@string/percent"
                style="@style/Gray.Button"
                android:id="@+id/btn_percent"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/division"
                style="@style/Orange.Button"
                android:id="@+id/btn_division"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Dark.Button"
                android:text="@string/seven"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight"
                style="@style/Dark.Button"
                android:id="@+id/btn_8"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                android:text="@string/nine"
                style="@style/Dark.Button"
                android:id="@+id/btn_9"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/multiplication"
                style="@style/Orange.Button"
                android:id="@+id/btn_multiplication"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Dark.Button"
                android:text="@string/four"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                android:text="@string/five"
                style="@style/Dark.Button"
                android:id="@+id/btn_5"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                android:text="@string/six"
                style="@style/Dark.Button"
                android:id="@+id/btn_6"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/minus"
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Dark.Button"
                android:text="@string/one"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                android:text="@string/two"
                style="@style/Dark.Button"
                android:id="@+id/btn_2"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginEnd="18dp"
                android:text="@string/three"
                style="@style/Dark.Button"
                android:id="@+id/btn_3"/>

            <com.google.android.material.button.MaterialButton
                android:text="@string/plus"
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Dark.Button"
                android:paddingEnd="116dp"
                android:text="0"
                android:layout_width="180dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="18dp"
                android:text="."
                style="@style/Dark.Button"
                android:id="@+id/btn_dot"/>

            <com.google.android.material.button.MaterialButton
                android:text="="
                style="@style/Orange.Button"
                android:id="@+id/btn_equal"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>